--- a/index.html
+++ b/index.html
@@ -321,8 +321,6 @@
 					<span class="line"></span>
 					<div class="title-repeat__img">
 
-						<img src="../images/camera.png" alt="видеонаблюдение">
-
 					</div><span class="line"></span>
 				</div>
 			</div>
@@ -383,9 +381,8 @@
 				<!--декоративный блок с декоративными линиями-->
 				<div class="title-repeat__top">
 					<span class="line"></span>
-					<div class="title-repeat__img">
-						<img src="../images/tools.svg" alt="видеонаблюдение">
-					</div><span class="line"></span>
+					<div class="change-types__img"> </div>
+					<span class="line"></span>
 				</div>
 			</div>
 			<!--ограничивающий контейнер-->
@@ -393,7 +390,7 @@
 				<!--блок с карточкой описания типа ремонта-->
 				<div class="constract__block redecorating">
 					<!--изображение блока-->
-					<img class="constract__img img-redecorating" src="../images/Redecorating.jpg" alt="">
+					<div class="img-redecorating"></div>
 					<!--внешний контейнер для текста-->
 					<div class="constract__text-bottom-container">
 						<div class="constract__text-container">
@@ -416,7 +413,7 @@
 				<!--блок с карточкой описания типа ремонта-->
 				<div class="constract__block overhaul">
 					<!--изображение блока-->
-					<img class="constract__img img-overhaul" src="../images/Overhaul.jpg" alt="">
+					<div class="img-overhaul"></div>
 					<!--внешний контейнер для текста-->
 					<div class="constract__text-bottom-container">
 						<div class="constract__text-container">
@@ -439,7 +436,7 @@
 				<!--блок с карточкой описания типа ремонта-->
 				<div class="constract__block designer_repair">
 					<!--изображение блока-->
-					<img class="constract__img img-designer_repair" src="../images/Designer Repair.jpg" alt="">
+					<div class="img-designer_repair"></div>
 					<!--внешний контейнер для текста-->
 					<div class="constract__text-bottom-container">
 						<div class="constract__text-container">
@@ -466,18 +463,12 @@
 		<!--_______________________________________________________________________________________________________________________-->
 
 
-		<section class="registration">
-			<div class="container registration__container"></div>
-		</section>
-
 		<!--_______________________________________________________________________________________________________________________-->
 
 		<!--секция с преимуществами и заявкой -->
 		<section class="call-the-measurer">
 			<!--фоновое изображение секции с преимуществами и заявкой-->
-			<div class="background-image">
-				<img class="call-the-measurer__img" src="../images/building.png" alt="">
-			</div>
+			<div class="background-image call-the-measurer__img"> </div>
 			<!-- специальный ограничивающий контейнер секции с преимуществами и заявкой -->
 			<div class="call-the-measurer__form-container">
 				<!--список секции-->
@@ -530,7 +521,7 @@
 					<!--декоративное изображение секции с информацией о видеонаблюдении за ремонтом-->
 					<div class="call-the-measurer__circle-and-text">
 						<div class="round-1 call-the-measurer__round-1">
-							<img class="call-the-measurer__round-1-img" src=" ../images/pig.png" alt="">
+							<div class="call-the-measurer__round-1-img"> </div>
 						</div>
 						<p class="call-the-measurer__text">Help save 10 - 20% of the
 							cost of materials</p>
@@ -548,11 +539,8 @@
 				<h3 class="title-repeat__text __black">our clients</h3>
 				<div class="title-repeat__top">
 					<span class="line"></span>
-					<div class="title-repeat__img">
-
-						<img src="../images/hands.png" alt=" видеонаблюдение">
-
-					</div><span class="line"></span>
+					<div class="our-clients__img"></div>
+					<span class="line"></span>
 				</div>
 			</div>
 			<!--параграф секции с отзывами наших клиентов -->
@@ -564,7 +552,7 @@
 					<div class="constract__text-bottom-container">
 						<!--блок изображения в круге-->
 						<div class="person">
-							<img class="round-1" src="../images/fedosova_marina_konstantinovna.png" alt="">
+							<div class="round-1 fedosova-img"></div>
 							<div class="person__name">
 								<h3>Fedosova Maria Konstantinovna</h3>
 							</div>
@@ -588,12 +576,12 @@
 						<!--блок с информацией о площади помещения и сроках-->
 						<div class="area-days">
 							<div class="area">
-								<img src="../images/area.png" alt="">
+								<div class="img-area-1"></div>
 								<p>40 m2</p>
 							</div>
 							<div class="vl"></div>
-							<div class="list-days">
-								<img src="../images/list-days.svg" alt="">
+							<div class="list-days ">
+								<div class="img-list-days-1"></div>
 								<p>48 DAYS</p>
 							</div>
 						</div>
@@ -603,7 +591,7 @@
 					<div class="constract__text-bottom-container">
 						<!--блок изображения в круге-->
 						<div class="person">
-							<img class="round-1" src="../images/afanasyev_sergey_alexsandrovich.png" alt="">
+							<div class="round-1 afanasyev-img"></div>
 							<div class="person__name">
 								<h3>Afanasyev Sergey Alexandrovich</h3>
 							</div>
@@ -627,12 +615,12 @@
 						<!--блок с информацией о площади помещения и сроках-->
 						<div class="area-days">
 							<div class="area">
-								<img src="../images/area.png" alt="">
+								<div class="img-area-1"></div>
 								<p>90 m2</p>
 							</div>
 							<div class="vl"></div>
 							<div class="list-days">
-								<img src="../images/list-days.svg" alt="">
+								<div class="img-list-days-1"></div>
 								<p>128 DAYS</p>
 							</div>
 						</div>
@@ -642,7 +630,7 @@
 					<div class="constract__text-bottom-container">
 						<!--блок изображения в круге-->
 						<div class="person">
-							<img class="round-1" src="../images/kiriev_egor_leonidovich.png" alt="">
+							<div class="round-1 kiriev-img"></div>
 							<div class="person__name">
 								<h3>Kiriev Egor Leonidovich</h3>
 							</div>
@@ -666,12 +654,12 @@
 						<!--блок с информацией о площади помещения и сроках-->
 						<div class="area-days">
 							<div class="area">
-								<img src="../images/area.png" alt="">
+								<div class="img-area-1"></div>
 								<p>56 m2</p>
 							</div>
 							<div class="vl"></div>
 							<div class="list-days">
-								<img src="../images/list-days.svg" alt="">
+								<div class="img-list-days-1"></div>
 								<p>86 DAYS</p>
 							</div>
 						</div>
@@ -686,8 +674,8 @@
 		<section class="have-any-questions">
 			<!--фоновое изображение секции с формой для дополнительных вопросов-->
 			<div class="have-any-questions__background-image">
-				<img class="have-any-questions__img" src="../images/have-any-questions-background.png" alt="">
-				<img class="have-any-questions__img-right" src="../images/have-any-questions-background-right.png" alt="">
+				<div class="have-any-questions__img"></div>
+				<div class="have-any-questions__img-right"></div>
 			</div>
 			<!-- специальный ограничивающий контейнер секции с формой для дополнительных вопросов-->
 			<div class="have-any-questions__container">
@@ -745,10 +733,16 @@
 					<div class="title-repeat__top">
 						<div class="hero-bottom__img">
 							<div class="round-top">
-								<a href="#"><img class="round-mail" src="../images/mail.png" alt=""></a>
+								<a href="">
+									<div class="round-mail">
+									</div>
+								</a>
 							</div>
-							<div class="round-top">
-								<a href="#"><img class="round-insta" src="../images/insta.png" alt=""></a>
+							<div class=" round-top">
+								<a href="">
+									<div class="round-insta">
+									</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -765,7 +759,8 @@
 							style="color:#eee;font-size:12px;position:absolute;top:28px;">Продажа и аренда коммерческой
 							недвижимости в Ростове‑на‑Дону</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUjb2QPCC"
 							width="925" height="462" frameborder="1" allowfullscreen="true"
-							style="position:relative;"></iframe></div>
+							style="position:relative;"></iframe>
+					</div>
 				</div>
 			</div>
 			<div class="hero-bottom-overlay"></div>
