--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</ul>
 			</nav>
 			<a class="tel" href="tel">+7 (928) 768-32-39</a>
-			<button class="button">Request a call</button>
+			<button class="button button-header">Request a call</button>
 		</div>
 	</header>
 
@@ -81,7 +81,7 @@
 					</p>
 					<!--блок с кнопками-->
 					<div class="hero__buttons">
-						<button class="button">CALCULATE THE COST</button>
+						<button class="button button-hero">CALCULATE THE COST</button>
 						<button class="button button-transparent">
 							SUBMIT YOUR APPLICATION
 						</button>
@@ -98,221 +98,246 @@
 		<section class="apartment">
 			<!--список городов-->
 			<div class="cities container">
-				<a href="#rostov_admiral">Rostov-on-Don, Admiral</a><a href="#sochi">Sochi Thieves</a><a
-					href="#rostov-on-don">Rostov-on-Don
-					Patriotic</a>
-			</div>
-			<!-- Slider main container -->
-			<div class="swiper container">
-
-				<!-- Additional required wrapper -->
-				<div class="swiper-wrapper">
-					<!-- Slides -->
-					<div class="swiper-slide rostov_admiral" id="rostov_admiral">
-						<!-- контаинер слайда -->
-						<div class="container apartment-container">
-							<!-- текст с описанием помещения-->
-							<div class="apartment__text">
-								<!-- заголовок -->
-								<h2 class="apartment__title">
-									Completed projects
-								</h2>
-								<!-- параграф описания -->
-								<p class="apartment__paragraf">
-									Only a small part of the work performed by our company is presented on the site. For 14
-									years
-									on in
-									the construction
-									market we have made happy more than 1000 families
-								</p>
-								<!-- прочие условия -->
-								<div class="apartment-description">
-									<!-- город -->
-									<div class="apartment-description__city">
-										<h3 class="apartment-description__title">
-											City:
-										</h3>
-										<p class="appartment-description__paragraf">
-											Rostov-on-Don
-											LCD admiral
-										</p>
-									</div>
-									<!-- площадь помещения -->
-									<div class="apartment-description__area:">
-										<h3 class="apartment-description__title">
-											apartment area:
-										</h3>
-										<p class="appartment-description__paragraf">
-											81 m2
-										</p>
-									</div>
-									<!-- время ремонта -->
-									<div class="apartment-description__repair-time:">
-										<h3 class="apartment-description__title">
-											Repair time:
-										</h3>
-										<p class="appartment-description__paragraf">
-											3.5 months
-										</p>
-									</div>
-									<!-- стоимость ремонта -->
-									<div class="apartment-description__repair-cost:">
-										<h3 class="apartment-description__title">
-											Repair Cost:
-										</h3>
-										<p class="appartment-description__paragraf">
-											Upon request
-										</p>
-									</div>
-								</div>
-
-							</div>
-							<div class="apartment__img img-rostov_admiral"> </div>
-						</div>
-					</div>
-
-
-					<div class="swiper-slide sochi" id="sochi">
-						<!-- контаинер слайда -->
-						<div class="container apartment-container">
-							<!-- текст с описанием помещения-->
-							<div class="apartment__text">
-								<!-- заголовок -->
-								<h2 class="apartment__title">
-									Completed projects
-								</h2>
-								<!-- параграф описания -->
-								<p class="apartment__paragraf">
-									Only a small part of the work performed by our company is presented on the site. For 14
-									years
-									on in
-									the construction
-									market we have made happy more than 1000 families
-								</p>
-								<!-- прочие условия -->
-								<div class="apartment-description">
-									<!-- город -->
-									<div class="apartment-description__city">
-										<h3 class="apartment-description__title">
-											City:
-										</h3>
-										<p class="appartment-description__paragraf">
-											Sochi
-										</p>
-									</div>
-									<!-- площадь помещения -->
-									<div class="apartment-description__area:">
-										<h3 class="apartment-description__title">
-											apartment area:
-										</h3>
-										<p class="appartment-description__paragraf">
-											81 m2
-										</p>
-									</div>
-									<!-- время ремонта -->
-									<div class="apartment-description__repair-time:">
-										<h3 class="apartment-description__title">
-											Repair time:
-										</h3>
-										<p class="appartment-description__paragraf">
-											3.5 months
-										</p>
-									</div>
-									<!-- стоимость ремонта -->
-									<div class="apartment-description__repair-cost:">
-										<h3 class="apartment-description__title">
-											Repair Cost:
-										</h3>
-										<p class="appartment-description__paragraf">
-											Upon request
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="apartment__img img-sochi"> </div>
-						</div>
-					</div>
-
-
-					<div class="swiper-slide rostov-on-don" id="rostov-on-don">
-						<!-- контаинер слайда -->
-						<div class="container apartment-container">
-							<!-- текст с описанием помещения-->
-							<div class="apartment__text">
-								<!-- заголовок -->
-								<h2 class="apartment__title">
-									Completed projects
-								</h2>
-								<!-- параграф описания -->
-								<p class="apartment__paragraf">
-									Only a small part of the work performed by our company is presented on the site. For 14
-									years
-									on in
-									the construction
-									market we have made happy more than 1000 families
-								</p>
-								<!-- прочие условия -->
-								<div class="apartment-description">
-									<!-- город -->
-									<div class="apartment-description__city">
-										<h3 class="apartment-description__title">
-											City:
-										</h3>
-										<p class="appartment-description__paragraf">
-											Rostov-on-Don
-											LCD admiral
-										</p>
-									</div>
-									<!-- площадь помещения -->
-									<div class="apartment-description__area:">
-										<h3 class="apartment-description__title">
-											apartment area:
-										</h3>
-										<p class="appartment-description__paragraf">
-											81 m2
-										</p>
-									</div>
-									<!-- время ремонта -->
-									<div class="apartment-description__repair-time:">
-										<h3 class="apartment-description__title">
-											Repair time:
-										</h3>
-										<p class="appartment-description__paragraf">
-											3.5 months
-										</p>
-									</div>
-									<!-- стоимость ремонта -->
-									<div class="apartment-description__repair-cost:">
-										<h3 class="apartment-description__title">
-											Repair Cost:
-										</h3>
-										<p class="appartment-description__paragraf">
-											Upon request
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="apartment__img img-rostov_admiral"></div>
-						</div>
-					</div>
-
-				</div>
-				<!-- блок навигации -->
-				<div class="swiper-navigation__navigation-block">
-					<!-- If we need navigation buttons -->
-					<div class="swiper-button-prev"></div>
-					<!-- If we need pagination -->
-					<div class="swiper-pagination "></div>
-					<div class="swiper-button-next"></div>
-				</div>
-
-
-
-				<!-- If we need scrollbar -->
-				<div class="swiper-scrollbar"></div>
+				<a href="#rostov">Rostov-on-Don, Admiral</a><a href="#sochi">Sochi Thieves</a><a
+					href="#patriotic">Rostov-on-Don Patriotic</a>
 			</div>
 
+			<div class="apartment-block">
+				<div class="apartment-block__slider">
+					<input class="apartment-nav" type="radio" id="slide-1" name="slide" aria-hidden="true" hidden=""
+						checked="checked">
+					<div class="apartment__slide apartment-container container rostov" id="rostov">
+						<!-- заголовок -->
+						<h2 class="apartment__title">
+							Completed projects
+						</h2>
+						<!-- параграф описания -->
+						<p class="apartment__paragraf">
+							Only a small part of the work performed by our company is presented on the site. For 14
+							years
+							on in
+							the construction
+							market we have made happy more than 1000 families
+						</p>
+						<!-- прочие условия -->
+						<div class="apartment-description">
+							<!-- город -->
+							<div class="apartment-description__city">
+								<h3 class="apartment-description__title">
+									City:
+								</h3>
+								<p class="apartment-description__paragraf">
+									Rostov-on-Don
+									LCD admiral
+								</p>
+							</div>
+							<!-- площадь помещения -->
+							<div class="apartment-description__area">
+								<h3 class="apartment-description__title">
+									apartment area:
+								</h3>
+								<p class="apartment-description__paragraf">
+									81 m2
+								</p>
+							</div>
+							<!-- время ремонта -->
+							<div class="apartment-description__repair-time">
+								<h3 class="apartment-description__title">
+									Repair time:
+								</h3>
+								<p class="apartment-description__paragraf">
+									3.5 months
+								</p>
+							</div>
+							<!-- стоимость ремонта -->
+							<div class="apartment-description__repair-cost">
+								<h3 class="apartment-description__title">
+									Repair Cost:
+								</h3>
+								<p class="apartment-description__paragraf">
+									Upon request
+								</p>
+							</div>
+						</div>
 
+						<div class="navigation">
+							<label for="slide-3" class="prev-next prev sl-1">‹</label>
+							<label for="slide-2" class="prev-next next sl-1">›</label>
+							<label for="slide-1" class="prev-next prev sl-2">‹</label>
+							<label for="slide-3" class="prev-next next sl-2">›</label>
+							<label for="slide-2" class="prev-next prev sl-3">‹</label>
+							<label for="slide-1" class="prev-next next sl-3">›</label>
+
+
+							<ol class="bullets">
+								<li>
+									<label for="slide-1" class="slide-bullet">•</label>
+								</li>
+								<li>
+									<label for="slide-2" class="slide-bullet">•</label>
+								</li>
+								<li>
+									<label for="slide-3" class="slide-bullet">•</label>
+								</li>
+							</ol>
+						</div>
+						<div class="apartment__img img-rostov_admiral"></div>
+					</div>
+					<input class="apartment-nav" type="radio" id="slide-2" name="slide" aria-hidden="true" hidden="">
+					<div class="apartment__slide apartment-container container sochi" id="sochi">
+						<!-- заголовок -->
+						<h2 class="apartment__title">
+							Completed projects
+						</h2>
+						<!-- параграф описания -->
+						<p class="apartment__paragraf">
+							Only a small part of the work performed by our company is presented on the site. For 14
+							years
+							on in
+							the construction
+							market we have made happy more than 1000 families
+						</p>
+						<!-- прочие условия -->
+						<div class="apartment-description">
+							<!-- город -->
+							<div class="apartment-description__city">
+								<h3 class="apartment-description__title">
+									City:
+								</h3>
+								<p class="apartment-description__paragraf">
+									Sochi
+								</p>
+							</div>
+							<!-- площадь помещения -->
+							<div class="apartment-description__area">
+								<h3 class="apartment-description__title">
+									apartment area:
+								</h3>
+								<p class="apartment-description__paragraf">
+									70 m2
+								</p>
+							</div>
+							<!-- время ремонта -->
+							<div class="apartment-description__repair-time">
+								<h3 class="apartment-description__title">
+									Repair time:
+								</h3>
+								<p class="apartment-description__paragraf">
+									4 months
+								</p>
+							</div>
+							<!-- стоимость ремонта -->
+							<div class="apartment-description__repair-cost">
+								<h3 class="apartment-description__title">
+									Repair Cost:
+								</h3>
+								<p class="apartment-description__paragraf">
+									Upon request
+								</p>
+							</div>
+						</div>
+						<div class="navigation">
+							<label for="slide-3" class="prev-next prev sl-1">‹</label>
+							<label for="slide-2" class="prev-next next sl-1">›</label>
+							<label for="slide-1" class="prev-next prev sl-2">‹</label>
+							<label for="slide-3" class="prev-next next sl-2">›</label>
+							<label for="slide-2" class="prev-next prev sl-3">‹</label>
+							<label for="slide-1" class="prev-next next sl-3">›</label>
+
+
+							<ol class="bullets">
+								<li>
+									<label for="slide-1" class="slide-bullet">•</label>
+								</li>
+								<li>
+									<label for="slide-2" class="slide-bullet">•</label>
+								</li>
+								<li>
+									<label for="slide-3" class="slide-bullet">•</label>
+								</li>
+							</ol>
+						</div>
+						<div class="apartment__img img-sochi"> </div>
+					</div>
+					<input class="apartment-nav" type="radio" id="slide-3" name="slide" aria-hidden="true" hidden="">
+					<div class="apartment__slide apartment-container container patriotic" id="patriotic">
+						<!-- заголовок -->
+						<h2 class="apartment__title">
+							Completed projects
+						</h2>
+						<!-- параграф описания -->
+						<p class="apartment__paragraf">
+							Only a small part of the work performed by our company is presented on the site. For 14
+							years
+							on in
+							the construction
+							market we have made happy more than 1000 families
+						</p>
+						<!-- прочие условия -->
+						<div class="apartment-description">
+							<!-- город -->
+							<div class="apartment-description__city">
+								<h3 class="apartment-description__title">
+									City:
+								</h3>
+								<p class="apartment-description__paragraf">
+									Rostov-on-Don
+									Patriotic
+								</p>
+							</div>
+							<!-- площадь помещения -->
+							<div class="apartment-description__area">
+								<h3 class="apartment-description__title">
+									apartment area:
+								</h3>
+								<p class="apartment-description__paragraf">
+									105 m2
+								</p>
+							</div>
+							<!-- время ремонта -->
+							<div class="apartment-description__repair-time">
+								<h3 class="apartment-description__title">
+									Repair time:
+								</h3>
+								<p class="apartment-description__paragraf">
+									5 months
+								</p>
+							</div>
+							<!-- стоимость ремонта -->
+							<div class="apartment-description__repair-cost">
+								<h3 class="apartment-description__title">
+									Repair Cost:
+								</h3>
+								<p class="apartment-description__paragraf">
+									Upon request
+								</p>
+							</div>
+						</div>
+						<div class="navigation">
+							<label for="slide-3" class="prev-next prev sl-1">‹</label>
+							<label for="slide-2" class="prev-next next sl-1">›</label>
+							<label for="slide-1" class="prev-next prev sl-2">‹</label>
+							<label for="slide-3" class="prev-next next sl-2">›</label>
+							<label for="slide-2" class="prev-next prev sl-3">‹</label>
+							<label for="slide-1" class="prev-next next sl-3">›</label>
+
+
+							<ol class="bullets">
+								<li>
+									<label for="slide-1" class="slide-bullet">•</label>
+								</li>
+								<li>
+									<label for="slide-2" class="slide-bullet">•</label>
+								</li>
+								<li>
+									<label for="slide-3" class="slide-bullet">•</label>
+								</li>
+							</ol>
+						</div>
+						<div class="apartment__img img-rostov_2"></div>
+					</div>
+				</div>
+			</div>
 
 			<!--повторяющийся заголовок с камерой-->
 			<div class="title-repeat">
@@ -470,7 +495,7 @@
 			<!--фоновое изображение секции с преимуществами и заявкой-->
 			<div class="background-image call-the-measurer__img"> </div>
 			<!-- специальный ограничивающий контейнер секции с преимуществами и заявкой -->
-			<div class="call-the-measurer__form-container">
+			<div class="call-the-measurer__form-container container">
 				<!--список секции-->
 				<div class="call-the-measurer__list">
 					<ol class="call-the-mesurer__ol">
